# light_bulb

./: .gitmodules  CMakeLists.txt  Kconfig.sysbuild  cmake_trace_output.txt  pm_static.yml  pm_static_nrf52840dk_nrf52840.yml  prj.conf  sysbuild.conf  test.py  trace_log_full.txt
.west/: config
boards/: nrf52840dk_nrf52840.overlay
sysbuild/mcuboot/: prj.conf
sysbuild/mcuboot/boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay
